--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.yayandroid:LocationManager:2.0.4'
 }
 apply plugin: 'com.google.gms.google-services'
