--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.yayandroid:LocationManager:2.0.4'
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
