--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,36 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'abcd'
+            keyPassword '123456'
+            storeFile file('/Users/chauhoangq./Documents/abcdstore')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.abc"
+        applicationId "com.team.abc"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -39,5 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.yayandroid:LocationManager:2.0.4'
     implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    implementation 'com.android.billingclient:billing:1.2.2'
+    implementation 'com.android.support:multidex:1.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
