--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.abc">
+    package="com.team.abc">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -17,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name="com.team.abc.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,14 +27,18 @@
         </activity>
 
         <activity
-            android:name=".ui.register.SigupActivity"
+            android:name="com.team.abc.ui.register.SigupActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.register.LoginActivity"
+            android:name="com.team.abc.ui.register.LoginActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".CreatePostActivity"
+            android:name="com.team.abc.CreatePostActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.team.abc.ui.post.DetailPostActivity"
             android:screenOrientation="portrait" />
 
         <meta-data
