--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
         <activity
             android:name="com.team.abc.ui.post.DetailPostActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".ui.register.VerifyAccount"
+            android:screenOrientation="portrait"
+            />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/ma_api" />
